--- a/amazon.css
+++ b/amazon.css
@@ -1,7 +1,26 @@
 @import url(./amazonreset.css);
+#txtwrapp {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+#txtwrapp .ko {
+  font-size: 1rem;
+  font-weight: 600;
+}
+#txtwrapp .el {
+  font-size: 0.8rem;
+  color: #666;
+}
+
 #intro {
   width: 100%;
   background: #f00;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  padding: 100px;
 }
 
 #bg {
@@ -183,8 +202,8 @@
   gap: 20px;
 }
 #tobe .tobeAllwrapp .tobetextArea .tobeTItle {
-  font-size: 1.2rem;
-  color: #ccc;
+  font-size: 1.1rem;
+  color: #fff;
 }
 #tobe .tobeAllwrapp .tobetextArea .tobedesc {
   display: flex;
@@ -234,8 +253,8 @@
   gap: 20px;
 }
 #prime .tobeAllwrapp .tobetextArea .tobeTItle {
-  font-size: 1.2rem;
-  color: #ccc;
+  font-size: 1.1rem;
+  color: #fff;
 }
 #prime .tobeAllwrapp .tobetextArea .tobedesc {
   display: flex;
@@ -274,7 +293,7 @@
 }
 
 #wf {
-  padding: 60px 40px 0;
+  padding: 60px 40px;
   background: #171717;
 }
 #wf .titleWrapp {
@@ -294,4 +313,323 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
+}
+#wf .wfImgArea div {
+  color: #666;
+  padding: 20px 0;
+  font-weight: bold;
+}
+
+#dt {
+  width: 100%;
+  padding: 60px 0;
+  background: #f1f1f1;
+}
+#dt .dtHeader {
+  width: 100%;
+  font-size: 3rem;
+  font-weight: 600;
+  padding: 50px 40px;
+}
+#dt .dtTitle {
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  padding: 20px;
+}
+#dt .mainWrapp {
+  width: 100%;
+  display: flex;
+}
+#dt .mainWrapp .leftArea {
+  width: 22%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 20px;
+}
+#dt .mainWrapp .leftMain {
+  transform: translateY(20px);
+  opacity: 0;
+  transition: all 0.5s;
+}
+#dt .mainWrapp .centerArea {
+  width: 56%;
+  display: flex;
+  justify-content: center;
+}
+#dt .mainWrapp .rightArea {
+  width: 22%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-right: 20px;
+}
+#dt .mainWrapp .rightMain {
+  opacity: 0;
+  transform: translateY(-180px);
+  transition: all 0.5s;
+}
+#dt .mainWrapp .fade-in {
+  opacity: 1;
+  transform: translateY(-200px);
+}
+#dt .mainWrapp .fade-inL {
+  opacity: 1;
+  transform: translateY(0px);
+}
+#dt .detailWrapp {
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+#dt .detailWrapp .leftArea {
+  width: 22%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 20px;
+}
+#dt .detailWrapp .leftDetail {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.5s;
+}
+#dt .detailWrapp .centerArea {
+  width: 56%;
+  display: flex;
+  justify-content: center;
+}
+#dt .detailWrapp .rightArea {
+  width: 22%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-right: 20px;
+}
+#dt .detailWrapp .rightDetail {
+  opacity: 0;
+  transform: translateY(-180px);
+  transition: all 0.5s;
+}
+#dt .detailWrapp .fade-in {
+  opacity: 1;
+  transform: translateY(-200px);
+}
+#dt .detailWrapp .fade-inL {
+  opacity: 1;
+  transform: translateY(0px);
+}
+#dt .CartWrapp {
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+#dt .CartWrapp .leftArea {
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 20px;
+}
+#dt .CartWrapp .leftDetail {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.5s;
+}
+#dt .CartWrapp .rightArea {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-right: 20px;
+}
+#dt .CartWrapp .rightCart {
+  display: flex;
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.5s;
+  padding-left: 40px;
+}
+#dt .CartWrapp .fade-in {
+  opacity: 1;
+  transform: translateY(10px);
+}
+#dt .CartWrapp .fade-inL {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+#mobile {
+  width: 100%;
+  padding: 60px 0;
+  background: #f1f1f1;
+}
+#mobile .MHeader {
+  width: 100%;
+  font-size: 3rem;
+  font-weight: 600;
+  padding: 50px 40px;
+}
+#mobile .loginWrapp {
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+#mobile .loginWrapp .leftArea {
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 20px;
+}
+#mobile .loginWrapp .leftDetail {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.5s;
+}
+#mobile .loginWrapp .rightArea {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-right: 20px;
+}
+#mobile .loginWrapp .rightCart {
+  display: flex;
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.5s;
+  padding-left: 40px;
+}
+#mobile .loginWrapp .fade-in {
+  opacity: 1;
+  transform: translateY(10px);
+}
+#mobile .loginWrapp .fade-inL {
+  opacity: 1;
+  transform: translateY(0px);
+}
+#mobile .MmainWrapp {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  padding: 100px 0;
+}
+#mobile .MmainWrapp .rightArea {
+  width: 100%;
+  display: flex;
+}
+#mobile .MmainWrapp .fade-in {
+  opacity: 1;
+  transform: translateY(10px);
+}
+#mobile .MmainWrapp .fade-inL {
+  opacity: 1;
+  transform: translateY(0px);
+}
+#mobile .MdetailWrapp {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  padding: 100px 0;
+}
+#mobile .MdetailWrapp .rightArea {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#mobile .MdetailWrapp .fade-in {
+  opacity: 1;
+  transform: translateY(10px);
+}
+#mobile .MdetailWrapp .fade-inL {
+  opacity: 1;
+  transform: translateY(0px);
+}
+#mobile .cartWrapp {
+  width: 100%;
+  height: auto;
+  display: flex;
+  padding: 100px 0;
+}
+#mobile .cartWrapp .leftArea {
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 20px;
+}
+#mobile .cartWrapp .rightArea {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-right: 12%;
+}
+#mobile .cartWrapp .leftMcart {
+  display: flex;
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.5s;
+  padding-left: 40px;
+}
+#mobile .cartWrapp .fade-in {
+  opacity: 1;
+  transform: translateY(10px);
+}
+#mobile .cartWrapp .fade-inL {
+  opacity: 1;
+  transform: translateY(0px);
+}
+#mobile .primeWrapp {
+  width: 100%;
+  height: auto;
+  display: flex;
+  padding: 100px 0;
+}
+#mobile .primeWrapp .leftArea {
+  width: 50%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-left: 12%;
+}
+#mobile .primeWrapp .leftDetail {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.5s;
+}
+#mobile .primeWrapp .rightArea {
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+#mobile .primeWrapp .rightprime {
+  display: flex;
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.5s;
+  padding-left: 40px;
+}
+#mobile .primeWrapp .fade-in {
+  opacity: 1;
+  transform: translateY(10px);
+}
+#mobile .primeWrapp .fade-inL {
+  opacity: 1;
+  transform: translateY(0px);
 }
