--- a/amazon.scss
+++ b/amazon.scss
@@ -7,10 +7,27 @@ $color: (
   primeColor: #00a8e1,
   borderColor: #171717,
 );
-
+#txtwrapp {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  .ko {
+    font-size: 1rem;
+    font-weight: 600;
+  }
+  .el {
+    font-size: 0.8rem;
+    color: #666;
+  }
+}
 #intro {
   width: 100%;
   background: #f00;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  padding: 100px;
 }
 #bg {
   padding: 60px 0;
@@ -184,8 +201,8 @@ $color: (
       flex-direction: column;
       gap: 20px;
       .tobeTItle {
-        font-size: 1.2rem;
-        color: #ccc;
+        font-size: 1.1rem;
+        color: #fff;
       }
       .tobedesc {
         display: flex;
@@ -234,8 +251,8 @@ $color: (
       flex-direction: column;
       gap: 20px;
       .tobeTItle {
-        font-size: 1.2rem;
-        color: #ccc;
+        font-size: 1.1rem;
+        color: #fff;
       }
       .tobedesc {
         display: flex;
@@ -275,7 +292,7 @@ $color: (
   }
 }
 #wf {
-  padding: 60px 40px 0;
+  padding: 60px 40px;
   background: map-get($color, borderColor);
   .titleWrapp {
     display: flex;
@@ -294,5 +311,322 @@ $color: (
     align-items: center;
     justify-content: center;
     gap: 20px;
+    div {
+      color: #666;
+      padding: 20px 0;
+      font-weight: bold;
+    }
+  }
+}
+#dt {
+  width: 100%;
+  padding: 60px 0;
+  background: #f1f1f1;
+  .dtHeader {
+    width: 100%;
+    font-size: 3rem;
+    font-weight: 600;
+    padding: 50px 40px;
+  }
+  .dtTitle {
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+    padding: 20px;
+  }
+  .mainWrapp {
+    width: 100%;
+    display: flex;
+    .leftArea {
+      width: 22%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding-left: 20px;
+    }
+    .leftMain {
+      transform: translateY(20px);
+      opacity: 0;
+      transition: all 0.5s;
+    }
+    .centerArea {
+      width: 56%;
+      display: flex;
+      justify-content: center;
+    }
+    .rightArea {
+      width: 22%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-right: 20px;
+    }
+    .rightMain {
+      opacity: 0;
+      transform: translateY(-180px);
+      transition: all 0.5s;
+    }
+    .fade-in {
+      opacity: 1;
+      transform: translateY(-200px);
+    }
+    .fade-inL {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+  .detailWrapp {
+    width: 100%;
+    height: auto;
+    display: flex;
+    .leftArea {
+      width: 22%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding-left: 20px;
+    }
+    .leftDetail {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.5s;
+    }
+    .centerArea {
+      width: 56%;
+      display: flex;
+      justify-content: center;
+    }
+    .rightArea {
+      width: 22%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      padding-right: 20px;
+    }
+    .rightDetail {
+      opacity: 0;
+      transform: translateY(-180px);
+      transition: all 0.5s;
+    }
+    .fade-in {
+      opacity: 1;
+      transform: translateY(-200px);
+    }
+    .fade-inL {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+  .CartWrapp {
+    width: 100%;
+    height: auto;
+    display: flex;
+    .leftArea {
+      width: 50%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding-left: 20px;
+    }
+    .leftDetail {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.5s;
+    }
+    .rightArea {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      padding-right: 20px;
+    }
+    .rightCart {
+      display: flex;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.5s;
+      padding-left: 40px;
+    }
+    .fade-in {
+      opacity: 1;
+      transform: translateY(10px);
+    }
+    .fade-inL {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+}
+#mobile {
+  width: 100%;
+  padding: 60px 0;
+  background: #f1f1f1;
+  .MHeader {
+    width: 100%;
+    font-size: 3rem;
+    font-weight: 600;
+    padding: 50px 40px;
+  }
+  .loginWrapp {
+    width: 100%;
+    height: auto;
+    display: flex;
+    .leftArea {
+      width: 50%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      padding-left: 20px;
+    }
+    .leftDetail {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.5s;
+    }
+    .rightArea {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      padding-right: 20px;
+    }
+    .rightCart {
+      display: flex;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.5s;
+      padding-left: 40px;
+    }
+    .fade-in {
+      opacity: 1;
+      transform: translateY(10px);
+    }
+    .fade-inL {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+  .MmainWrapp {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    padding: 100px 0;
+    .rightArea {
+      width: 100%;
+      display: flex;
+    }
+    .fade-in {
+      opacity: 1;
+      transform: translateY(10px);
+    }
+    .fade-inL {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+  .MdetailWrapp {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    padding: 100px 0;
+    .rightArea {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .fade-in {
+      opacity: 1;
+      transform: translateY(10px);
+    }
+    .fade-inL {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+  .cartWrapp {
+    width: 100%;
+    height: auto;
+    display: flex;
+    padding: 100px 0;
+    .leftArea {
+      width: 50%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      padding-left: 20px;
+    }
+    .rightArea {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      margin-right: 12%;
+    }
+    .leftMcart {
+      display: flex;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.5s;
+      padding-left: 40px;
+    }
+    .fade-in {
+      opacity: 1;
+      transform: translateY(10px);
+    }
+    .fade-inL {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+  .primeWrapp {
+    width: 100%;
+    height: auto;
+    display: flex;
+    padding: 100px 0;
+    .leftArea {
+      width: 50%;
+      height: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      margin-left: 12%;
+    }
+    .leftDetail {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 0.5s;
+    }
+    .rightArea {
+      width: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-items: center;
+    }
+    .rightprime {
+      display: flex;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.5s;
+      padding-left: 40px;
+    }
+    .fade-in {
+      opacity: 1;
+      transform: translateY(10px);
+    }
+    .fade-inL {
+      opacity: 1;
+      transform: translateY(0px);
+    }
   }
 }
